--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>EXERCICIS DAVID GRANADOS</h1>
-    <a href="exercicis/ex1.html">Exercici1</a>
+    <a href="exercicis/ex1.html">Exercici1</a><br>
+    <a href="exercicis/ex2.html">Exercici2</a><br>
+    <a href="exercicis/ex3.html">Exercici3</a><br>
+    <a href="exercicis/ex4.html">Exercici4</a><br>
+    <a href="exercicis/mystore/ex6.html">Exercici5 / MY STORE</a><br>
 </body>
 </html>
